--- a/app/i18n/es/strings.xml
+++ b/app/i18n/es/strings.xml
@@ -22,4 +22,6 @@
   <string name="empty_email">Ingresa tu correo electrónico.</string>
   <string name="empty_pass">Ingresa tu contraseña.</string>
   <string name="delivery_orders_empty">No se encontraron ordenes de entrega para el usuario actual.</string>
+  <string name="logout">Cerrar Sesión</string>
+  <string name="logout_confirmation">¿Estas seguro que deseas cerrar sesión?</string>
 </resources>
