--- a/app/i18n/en/strings.xml
+++ b/app/i18n/en/strings.xml
@@ -11,8 +11,12 @@
   <string name="send">Send</string>
   <string name="email">Email</string>
   <string name="pass">Password</string>
+  <string name="deliver">Deliver</string>
+  <string name="photo">Photo</string>
+  <string name="devolution">Devolution</string>
   <string name="uploading">Uploading...</string>
   <string name="loader_default">Loading...</string>
+  <string name="dialog_default">Select an option</string>
   <string name="photo_uploader_take_photo">Select a photo from camera or gallery.</string>
   <string name="photo_uploader_device_not_have_camera">Devise hasn't a camera.</string>
   <string name="photo_uploader_error_take">Error taking photo. Try again later.</string>s
